clusters/hysh-ibm-01/web-console/web-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypershell-web-console
  namespace: hypershell
  labels:
    app: hypershell-web-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hypershell-web-console
  template:
    metadata:
      labels:
        app: hypershell-web-console
    spec:
      serviceAccountName: hypershell-web-console
      securityContext:
        runAsNonRoot: true
      containers:
        - name: web-console
          image: image-registry.openshift-image-registry.svc:5000/openshift/hypershell-web-console:dev
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 2
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hypershell-web-console
  namespace: hypershell
spec:
  selector:
    app: hypershell-web-console
  ports:
    - name: http
      port: 3000
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hypershell-console
  namespace: hypershell
  labels:
    app: hypershell-web-console
spec:
  host: hypershell-console.hysh-ibm-01-4c28435107377e996c6eb39230b7bcf5-0000.us-east.containers.appdomain.cloud
  to:
    kind: Service
    name: hypershell-web-console
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
